# axum-rabbitmq-lettre

./: .gitignore  Cargo.toml  README.md  env-example
src/: config.rs  email.rs  err.rs  form.rs  handler.rs  lib.rs  main.rs
src/model/: email.rs  mod.rs  state.rs  user.rs
src/rabbitmq/: basic.rs  mod.rs  topic.rs
